SPelling is RLY hard
- :100:

--- a/frontend/mission-ops/src/app/cubesat-sys-inputs/cubesat-sys-inputs.component.html
+++ b/frontend/mission-ops/src/app/cubesat-sys-inputs/cubesat-sys-inputs.component.html
@@ -116,7 +116,7 @@
   </ng-container>
   <ng-container modal-body>
     <p>Are you sure you want to delete system <span class="text-primary">{{selectedSystem?.systemName}}</span>?</p>
-    <p>It will be deleted <span class="text-danger">permanently</span> along with <span class = "text-danger">all associated components and component telemetries</span> and can never be recovered.</p>
+    <p>It will be deleted <span class="text-danger">permanently</span> along with <span class = "text-danger">all associated components and component telemetry</span> and can never be recovered.</p>
   </ng-container>
   <ng-container modal-footer>
     <button (click)="deleteSystem()" class="btn btn-outline-danger">
