Made user buttons nicer

--- a/frontend/mission-ops/src/app/create-user/create-user.component.html
+++ b/frontend/mission-ops/src/app/create-user/create-user.component.html
@@ -28,4 +28,8 @@
     Create
     <span *ngIf="processing" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
   </button>
+  &nbsp;
+  <a class="btn btn-outline-secondary" href="/users" role="button">
+    Cancel
+  </a>
 </form>
