--- a/frontend/mission-ops/src/app/login/login.component.html
+++ b/frontend/mission-ops/src/app/login/login.component.html
@@ -18,7 +18,8 @@
             Sign In
             <span *ngIf="processing" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
           </button>
-          <button (click)="forgotPassword()" class="btn btn-outline-link">
+          &nbsp;
+          <button (click)="forgotPassword()" class="btn btn-link btn-sm">
             Forgot Password?
           </button>
         </form>
