--- a/frontend/mission-ops/src/app/modify-user/modify-user.component.html
+++ b/frontend/mission-ops/src/app/modify-user/modify-user.component.html
@@ -39,6 +39,7 @@
       Save Changes
       <span *ngIf="processing" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
     </button>
+    &nbsp;
     <button class="btn btn-outline-secondary" (click)="goBack()">
       Back
     </button>
