--- a/frontend/mission-ops/src/app/header/header.component.html
+++ b/frontend/mission-ops/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Western CubeSat</a>
+  <a class="navbar-brand" href="#">CubeSat Portal</a>
   <button class="navbar-toggler btn btn-outline-primary" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed" aria-controls="navbarNav" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
