--- a/frontend/mission-ops/src/app/anomaly-subscription/anomaly-subscription.component.html
+++ b/frontend/mission-ops/src/app/anomaly-subscription/anomaly-subscription.component.html
@@ -1,52 +1,20 @@
-<h4>Manage Anomaly Subscriptions</h4>
+<h3>Manage Anomaly Subscriptions</h3>
 
-<br><br>
+<br>
 
-<div class="container">
-    <div class="col">
-      <div class="row">
-        <div *ngIf="subscriptions && subscriptions.length > 0; else noSubscriptions">
-            <ul class="list-group">
-              <li *ngFor="let sub of subscriptions"
-              (click)="selectSub(sub)"
-              class="list-group-item">
-                {{sub.systemName}}
-              </li>
-            </ul>
-          </div>
-          <ng-template #noSubscriptions>
-              <p>
-                You don't have any anomaly subscriptions yet.
-              </p>
-          </ng-template>
-        </div>
-
-          <br><br>
-
-          <div class="col">
-              <div class="row">
-                <div ngbDropdown class="d-inline-block">
-                  <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Add Subscription</button>
-                  <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-                    <div *ngIf="systems && systems.length > 0; else noSystems">
-                      <button ngbDropdownItem *ngFor="let sys of systems" (click)="addSubscription(sys.systemID)">{{sys.systemName}}</button>
-                    </div>
-                    <ng-template #noSystems>
-                      <p>
-                        You're currently subscribed to all systems!
-                      </p>
-                    </ng-template>
-                  </div>
-                </div>
-              </div>
-            
-            <div *ngIf="selectedSub">
-              <button class="btn btn-outline-primary" (click)="removeSub()">Unsubscribe from {{selectedSub.systemName}}</button>
-            </div>
-            
-            </div>
-    </div>
+<div *ngIf="systems && systems.length > 0; else noSystems" style="width: 700px">
+  <ul class="list-group">
+    <li *ngFor="let sys of systems"
+     [class.active]="sys === selectedSys"
+      class="list-group-item">
+      {{sys.systemName}}
+      <button *ngIf="isSubscribed(sys.systemID)" class="btn btn-dark" (click)="removeSub(sys.systemID, sys.systemName)" style="width: 130px; float: right">Unsubscribe</button>
+      <button *ngIf="!isSubscribed(sys.systemID)" class="btn btn-info" (click)="addSubscription(sys.systemID, sys.systemName)" style="width: 130px; float: right">Subscribe</button>
+    </li>
+   </ul>
 </div>
-
-  
-
+<ng-template #noSystems>
+    <p>
+      There are no systems to subscribe to.
+    </p>
+</ng-template>
