--- a/frontend/mission-ops/src/app/home-page/home-page.component.html
+++ b/frontend/mission-ops/src/app/home-page/home-page.component.html
@@ -1,7 +1,7 @@
 <div class = "row justify-content-center">
     <div class = "container">
         <img src="assets/cubesat-banniere.jpg" alt="cubesatDevice">
-        <h4 class="display-4">Western Center for Planetary Science and Exploration (CPSX)/Nunavut Artic College CubeSat Mission Operation Portal</h4>
+        <h4 class="display-4">Western Center for Planetary Science and Exploration (CPSX)/Nunavut Arctic College CubeSat Mission Operation Portal</h4>
         <hr/>
         <h4>What is the CubeSat?</h4>
         CPSX, in partnership with Nunavut Arctic College, received a grant from the Canadian Space Agency (CSA) to fund the development of a CubeSat device. The CubeSat is a miniature satellite set to be launched in 2021. The device will be designed and built by various teams composed of Western University & Nunavut Arctic College students and faculty members. Once the device has been launched, mission control will be able to operate the device from this mission control application.
