--- a/frontend/mission-ops/src/app/queued-telecommand/queued-telecommand.component.html
+++ b/frontend/mission-ops/src/app/queued-telecommand/queued-telecommand.component.html
@@ -32,7 +32,7 @@
           <label>Execution Pass</label>
        </div>
         <div class = "col">
-            <input [ngModel] = "queuedTelecommand.transmissionPassID"  class="form-control" name= "queuedTelecommandExecutionPassID" readonly>
+            <input [ngModel] = "queuedTelecommand.executionPassID"  class="form-control" name= "queuedTelecommandExecutionPassID" readonly>
         </div>
       </div>
       <div class = "form-group">
