--- a/frontend/mission-ops/src/app/create-component/create-component.component.html
+++ b/frontend/mission-ops/src/app/create-component/create-component.component.html
@@ -23,10 +23,7 @@
             formControlName = "name"/>
         </div>
       </div>
-      <div *ngFor="let error of newCompErrorMsgs">
-        <label style="color:red;">{{error}}</label>
-        <br />
-    </div>
+      <app-alert [alertStyle]="'danger'"></app-alert>
     </div>
   <div class="modal-footer">
     <button [ngClass] = "isEditing ? 'btn btn-info' : 'btn btn-success'"
