--- a/frontend/mission-ops/src/app/create-system/create-system.component.html
+++ b/frontend/mission-ops/src/app/create-system/create-system.component.html
@@ -15,10 +15,7 @@
             formControlName = "systemName"/>
         </div>
       </div>
-      <div *ngFor="let error of newSystemErrorMsgs">
-        <label style="color:red;">{{error}}</label>
-        <br />
-    </div>
+      <app-alert [alertStyle]="'danger'"></app-alert>
     </div>
   <div class="modal-footer">
     <button [ngClass] = "isEditing ? 'btn btn-info' : 'btn btn-success'"
