--- a/frontend/mission-ops/src/app/create-telemetry-type/create-telemetry-type.component.html
+++ b/frontend/mission-ops/src/app/create-telemetry-type/create-telemetry-type.component.html
@@ -23,10 +23,7 @@
               placeholder="Unit"/>
           </div>
       </div>
-      <div *ngFor="let error of newTelemetryTypeErrorMsgs">
-          <label style="color:red;">{{error}}</label>
-          <br />
-      </div>
+      <app-alert [alertStyle]="'danger'"></app-alert>
     </div>
   <div class="modal-footer">
     <button [ngClass] = "isEditing ? 'btn btn-info' : 'btn btn-success'"
