--- a/frontend/mission-ops/src/app/header/header.component.scss
+++ b/frontend/mission-ops/src/app/header/header.component.scss
@@ -1,3 +1,13 @@
 .dropdown-menu {
     margin-left: -75%;
 }
+
+.navbar-brand {
+    font-family: 'Libre Baskerville', serif;
+    font-size: 1.4rem;
+    font-weight: bold;
+}
+
+* {
+    font-size: 1rem;
+}
