--- a/frontend/mission-ops/src/app/header/header.component.html
+++ b/frontend/mission-ops/src/app/header/header.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">CubeSat Portal</a>
+<nav class="navbar navbar-expand-lg navbar-custom">
+  <a class="navbar-brand" routerLink="/">CubeSat Portal</a>
   <button class="navbar-toggler btn btn-outline-primary" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed" aria-controls="navbarNav" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -18,21 +18,22 @@
         <a class="nav-link" routerLink="/login">Login</a>
       </li>
       <ng-template #alreadyAuthenticated>
-        <li class="nav-item dropdown" ngbDropdown placement="bottom">
-          <a class="nav-link dropdown-toggle" ngbDropdownToggle role="button" aria-haspopup="true" aria-expanded="false">{{auth.getCurrentUser()?.getName()}}</a>
-          <div ngbDropdownMenu class="dropdown-menu">
-            <a class="dropdown-item" href="/users/edit?id={{auth.getCurrentUser()?.id}}">Edit Profile</a>
+        <li class="nav-item dropdown" ngbDropdown placement="bottom-right">
+          <a class="nav-link dropdown-toggle" ngbDropdownToggle id="userDropdown" role="button" aria-haspopup="true" aria-expanded="false">{{auth.getCurrentUser()?.getName()}}</a>
+          <div ngbDropdownMenu aria-labelledby="userDropdown">
+            <a class="dropdown-item" routerLink="/users/edit" [queryParams]='{ id: auth.getCurrentUser()?.id }'>Edit Profile</a>
             <ng-container *ngIf="auth.isAdministrator()">
+                <a class="dropdown-item" routerLink="/anomaly-subscription" [queryParams]='{ id: auth.getCurrentUser()?.id }'>Manage Anomaly Subscriptions</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="/users">Manage Users</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="/system-inputs">Manage System Inputs</a>
+              <a class="dropdown-item" routerLink="/users">Manage Users</a>
+              <a class="dropdown-item" routerLink="/system-inputs">Manage System Inputs</a>
             </ng-container>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/anomaly-subscription?id={{auth.getCurrentUser()?.id}}">Manage Anomaly Subscriptions</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/logout">Logout</a>
+            <a class="dropdown-item" href="/logout"><strong>Logout</strong></a>
           </div>
+        </li>
+        <li class = "nav-item">
+          <a class="nav-link" routerLink="/logout"><i class='fa fa-power-off'></i></a>
         </li>
       </ng-template>
     </ul>
