--- a/frontend/mission-ops/src/styles.scss
+++ b/frontend/mission-ops/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css"; 
+@import '~font-awesome/css/font-awesome.css';
 @import '~ngx-toastr/toastr.css';
 @import url('https://fonts.googleapis.com/css?family=Libre+Baskerville|Gothic+A1');
 
@@ -11,5 +12,35 @@
     b {
         font-family: 'Gothic A1 Semi-Bold', sans-serif;
     }
+}
+
+.navbar-custom {
+    background-color: rgb(72, 11, 132);
+}
+/* change the brand and text color */
+.navbar-custom .navbar-brand,
+.navbar-custom .navbar-text {
+    color: rgba(255,255,255,.9);
+}
+/* change the link color */
+.navbar-custom .navbar-nav .nav-link {
+    color: rgba(255,255,255,.7);
+}
+/* change the color of active or hovered links */
+.navbar-custom .nav-item.active .nav-link,
+.navbar-custom .nav-item:hover .nav-link {
+    color: #ffffff;
+}
+/* for dropdown only - change the color of droodown */
+.navbar-custom .dropdown-menu {
+    background-color: rgb(72, 11, 132);
+}
+.navbar-custom .dropdown-item {
+    background-color: rgb(72, 11, 132);
+    color: rgba(255,255,255,.7);
+}
+.navbar-custom .dropdown-item:hover,
+.navbar-custom .dropdown-item:focus {
+    color: #ffffff;
 }
 
