--- a/frontend/mission-ops/src/app/queues/queues.component.html
+++ b/frontend/mission-ops/src/app/queues/queues.component.html
@@ -1,11 +1,14 @@
-<div class = "row justify-content-center">
-    <div class="btn-group" role="group">
-        <button class = "btn btn-outline-success" (click) = "promptAddQueuedTelecommand()">Add Telecommand to Queue</button>
-        <button class = "btn btn-outline-success" (click) = "promptAddQueuedTelecommandBatch()">Add Telecommand Batch to Queue</button>
-        <button class="btn btn-outline-success" (click)="promptAddPass()">Add New Pass</button>
-    </div>
+<h2>Queues</h2>
+<div class = "row">
+  <div class = "col">
+      <div class="btn-group" role="group">
+          <button class = "btn btn-outline-success" (click) = "promptAddQueuedTelecommand()">Add Telecommand to Queue</button>
+          <button class = "btn btn-outline-success" (click) = "promptAddQueuedTelecommandBatch()">Add Telecommand Batch to Queue</button>
+          <button class="btn btn-outline-success" (click)="promptAddPass()">Add New Pass</button>
+        </div>
+  </div>
 </div>
-<br />
+<br/>
 <div class = "row">
   <div class = "col">
     <ngb-tabset activeId="ngb-tab-1">
