Updated Add telecommand batch button text
- Updated to be consistent with buttons Telecommand, Queues pages

--- a/frontend/mission-ops/src/app/telecommand-batches/telecommand-batches.component.html
+++ b/frontend/mission-ops/src/app/telecommand-batches/telecommand-batches.component.html
@@ -3,7 +3,7 @@
   <div class="col">
     <button type="button"
     class="btn btn-outline-success"
-    (click)="addNewTelecommandBatch()">Create New Batch</button>
+    (click)="addNewTelecommandBatch()">Add New Telecommand Batch</button>
     <br />
     <br />
     <ul class="list-group">
