Removed trash button from queued telecommand if in a past Pass
- passed through if the selected pass has occurred
- button only appears if it has not occurred

--- a/frontend/mission-ops/src/app/execution-queue/execution-queue.component.html
+++ b/frontend/mission-ops/src/app/execution-queue/execution-queue.component.html
@@ -8,6 +8,7 @@
               [telecommands] = "telecommands"
               [users] = "users"
               [orderRank] = "i + 1"
+              [isInPast] = "selectedPass.passHasOccurred"
               (reloadQueuedTelecommands)="reloadQueuedTelecommands($event)">
           </app-queued-telecommand>
         </div>
