--- a/frontend/mission-ops/src/app/transmission-queue/transmission-queue.component.html
+++ b/frontend/mission-ops/src/app/transmission-queue/transmission-queue.component.html
@@ -17,6 +17,7 @@
               [telecommands] = "telecommands"
               [users] = "users"
               [orderRank]="i+1"
+              [isInPast]="selectedPass.passHasOccurred"
               (reloadQueuedTelecommands)="reloadQueuedTelecommands($event)">
           </app-queued-telecommand>
         </div>
