Formatted batch name input on Add Telecommand Batch page
- put text input on next line for more space
- added spacing between text input and button

--- a/frontend/mission-ops/src/app/telecommands/telecommands.component.html
+++ b/frontend/mission-ops/src/app/telecommands/telecommands.component.html
@@ -17,7 +17,7 @@
       </ul>
       <div *ngIf = "telecommands && telecommands.length == 0;">
         <br/>
-        <p class = "font-weight-bolder">No telecommands have been created</p>
+        <p class = "font-weight-bolder">No telecommands have been created.</p>
       </div>
     </div>
     <div class="col">
