--- a/frontend/mission-ops/src/app/telecommand-batches/telecommand-batches.component.html
+++ b/frontend/mission-ops/src/app/telecommand-batches/telecommand-batches.component.html
@@ -21,13 +21,15 @@
   </div>
   <div class="col">
     <div *ngIf="selectedBatch">
-        <form  class="form-inline">
+        <form class="form">
           <div class="form-group">
-            <label style="padding-right: 10px;"><b>Batch Name: </b></label>
-            <input [(ngModel)] = "selectedBatch.name" class="form-control" name = "selectedBatchName">
-            <button type="button"
-            class="btn btn-outline-success"
-            (click)="saveBatchName()">Save Name</button>
+            <label>Batch Name</label>
+            <div class="input-group">
+              <input [(ngModel)] = "selectedBatch.name" class="form-control mr-1" name = "selectedBatchName">
+              <button type="button"
+              class="btn btn-outline-success"
+              (click)="saveBatchName()">Save Name</button>
+            </div>
           </div>
         </form>
         <br/>
@@ -40,11 +42,12 @@
           </app-preset-telecommand-details>
         </ul>
         <form class="form-inline" style="padding-top:10px;padding-bottom: 10px;">
-          <label style="padding-right: 10px;"><b>New Telecommand: </b></label>
+          <label class="mr-1"><b>New Telecommand: </b></label>
           <app-telecommand-dropdown
           [telecommands] = "telecommands"
           [selectedTelecommand] = "selectedTelecommand"
-          (newSelectedTelecommand) = "updateSelectedTelecommand($event)">
+          (newSelectedTelecommand) = "updateSelectedTelecommand($event)"
+          class="mr-1">
           </app-telecommand-dropdown>
           <button type="button"
           class="btn btn-outline-success"
