[Minor] capitalization typo

--- a/frontend/mission-ops/src/app/telecommand-details/telecommand-details.component.html
+++ b/frontend/mission-ops/src/app/telecommand-details/telecommand-details.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="telecommand">
     <form>
       <div class="form-group">
-        <label >Telecommand name</label>
+        <label >Telecommand Name</label>
         <input [readonly]="existingTelecommand" [(ngModel)] = "telecommand.name" class="form-control" name = "telecommandName">
       </div>
       <div class="form-group">
