--- a/frontend/mission-ops/src/app/telecommand-batches/telecommand-batches.component.html
+++ b/frontend/mission-ops/src/app/telecommand-batches/telecommand-batches.component.html
@@ -1,4 +1,4 @@
-<h2>Telecommand Batches</h2>
+<h2 class="mb-3">Telecommand Batches</h2>
 <div class="row">
   <div class="col">
     <button type="button"
