--- a/frontend/mission-ops/src/app/datetime-picker/datetime-picker.component.html
+++ b/frontend/mission-ops/src/app/datetime-picker/datetime-picker.component.html
@@ -1,19 +1,12 @@
 <div [formGroup] = "formGroup">
-  <div class="form-group">
-    <div class="input-group">
-      <input class="form-control" placeholder="yyyy-mm-dd"
-            [formControlName]="dateFormControlName" ngbDatepicker #d="ngbDatepicker"/>
+  <div class="input-group">
+      <input class="form-control" [owlDateTime]="dt" [formControlName]="dateFormControlName">
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button">
+        <div class="btn btn-outline-secondary" style="border-top-right-radius: 0.25rem;border-bottom-right-radius:0.25rem" [owlDateTimeTrigger]="dt">
           <i class="fa fa-calendar"></i>
-        </button>
+        </div>
       </div>
-    </div>
-  </div>
-  <div class = "d-flex justify-content-center align-items-center container">
-    <div class="form-group">
-      <ngb-timepicker [formControlName] = "timeFormControlName" [seconds]="true"></ngb-timepicker>
-    </div>
+      <owl-date-time #dt [showSecondsTimer]="true"></owl-date-time>
   </div>
 </div>
 
