--- a/frontend/mission-ops/src/app/anomaly-table/anomaly-table.component.html
+++ b/frontend/mission-ops/src/app/anomaly-table/anomaly-table.component.html
@@ -1,15 +1,18 @@
-<h3>Anomalies</h3>
-
+<h2 class = "mb-3">Anomalies</h2>
   <form>
-    <div class="form-group form-inline">
-        Search anomalies: <input class="form-control ml-2" type="text" name="searchTerm" [(ngModel)]="service.searchTerm"/>
-        <span class="ml-3" *ngIf="service.loading$ | async">Loading...</span>
+    <div class = "row">
+      <div class = "col mb-2">
+        <div class="form-group form-inline">
+            Search anomalies: <input class="form-control ml-2" type="text" name="searchTerm" [(ngModel)]="service.searchTerm"/>
+            <span class="ml-3" *ngIf="service.loading$ | async">Loading...</span>
+        </div>
+      </div>
     </div>
   
     <table class="table table-striped">
       <thead>
       <tr>
-        <th scope="col"sortable="collectionTime" (sort)="onSort($event)">Collection datetime</th>
+        <th scope="col" sortable="collectionTime" (sort)="onSort($event)">Collection datetime</th>
         <th scope="col" sortable="compTelemName" (sort)="onSort($event)">Telemetry</th>
         <th scope="col" sortable="compName" (sort)="onSort($event)">Component name</th>
         <th scope="col" sortable="sysName" (sort)="onSort($event)">System name</th>
@@ -19,7 +22,7 @@
         <th scope="col" sortable="unit" (sort)="onSort($event)">Unit</th>
       </tr>
       </thead>
-      <tbody>
+      <tbody *ngIf="!(service.loading$ | async); else noAnoms">
       <tr *ngFor="let anom of anomalies$ | async">
         <td><ngb-highlight [result]="getFormattedDate(anom.collectionTime)" [term]="service.searchTerm"></ngb-highlight></td>
         <td><ngb-highlight [result]="anom.compTelemName" [term]="service.searchTerm"></ngb-highlight></td>
@@ -46,10 +49,26 @@
   
   </form>
 
-<!---
 <ng-template #noAnoms>
-  <p>
-    There are no anomalies to display. Check back soon!
-  </p>
-</ng-template>
--->
+    <ng-container *ngIf = "anomalies && anomalies.length == 0; else spinner">
+      <tr>
+        <td colspan="8">
+          <p class = "font-weight-bolder mt-2">There are no anomalies to display. Check back soon!</p>
+        </td>
+      </tr>
+    </ng-container>
+  </ng-template>
+  
+  <ng-template #spinner>
+    <tr>
+      <td colspan="8">
+        <div class = "container justify-content-center">
+          <div class = "text-center align-self-center">
+            <div class = "spinner-border" role="status">
+              <span class="sr-only">Loading...</span>
+            </div>
+          </div>
+        </div>
+      </td> 
+    </tr>
+  </ng-template>
