--- a/frontend/mission-ops/src/app/media-library/media-library.component.html
+++ b/frontend/mission-ops/src/app/media-library/media-library.component.html
@@ -1,9 +1,9 @@
-<div class="container">
-  <h2>Payload Data</h2>
+<h2 class="mb-3">Payload Data</h2>
+<div>
   <ng-container *ngIf="mediaList; else loadingSpinner">
     <div class="row">
       <div *ngFor="let m of mediaList.items; index as i" class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-        <a href="payloadData/view?id={{m.id}}" style="color: inherit">
+        <a routerLink="view" [queryParams]="{ id: m.id }"style="color: inherit">
           <div class="card">
             <img src="{{m.previewSrc}}" class="card-img-top" [hidden]="loading[i]" (load)="loading[i] = false">
             <div *ngIf="loading[i]" class="text-center">
@@ -12,9 +12,9 @@
               </div>
             </div>
             <div class="card-body">
-              <h5 class="card-title">
-                {{m.name}}
-              </h5>
+              <p class="card-title">
+                <b>{{m.name}}</b>
+              </p>
             </div>
           </div>
         </a>
