--- a/frontend/mission-ops/src/app/media-view/media-view.component.html
+++ b/frontend/mission-ops/src/app/media-view/media-view.component.html
@@ -9,5 +9,5 @@
     <h2 class="mb-3">Error</h2>
     <p>{{errorMsg}}</p>
   </ng-template>
-  <a class="btn btn-outline-secondary mt-3" routerLink=".." role="button">Payload Data Gallery</a>
+  <a class="btn btn-outline-secondary mt-3" routerLink="/payloadData" role="button">Payload Data Gallery</a>
 </div>
