Fixed logout router link

--- a/frontend/mission-ops/src/app/header/header.component.html
+++ b/frontend/mission-ops/src/app/header/header.component.html
@@ -29,7 +29,7 @@
               <a class="dropdown-item" routerLink="/system-inputs">Manage System Inputs</a>
             </ng-container>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/logout"><strong>Logout</strong></a>
+            <a class="dropdown-item" routerLink="/logout"><strong>Logout</strong></a>
           </div>
         </li>
         <li class = "nav-item">
