--- a/frontend/mission-ops/src/app/modify-user/modify-user.component.html
+++ b/frontend/mission-ops/src/app/modify-user/modify-user.component.html
@@ -1,57 +1,59 @@
-<div class="container">
-  <h2>Modify User</h2>
-  <form *ngIf="user; else loadingSpinner">
-    <div class="form-group">
-      <label for="nameInput">Name</label>
-      <input [(ngModel)]="user.name" type="text" class="form-control" id="nameInput" placeholder="Name" name="name">
-    </div>
-    <div class="form-group">
-      <label for="emailInput">Email</label>
-      <input [ngModel]="user.email" type="email" class="form-control" id="emailInput" placeholder="Email" name="email" readonly>
-    </div>
-    <div class="form-group">
-      <label for="phoneInput">Phone</label>
-      <input [(ngModel)]="user.phone" type="text" class="form-control" id="phoneInput" placeholder="Phone" name="phone">
-    </div>
-    <div class="form-group">
-      <label for="contactSelect">Preferred Contact Method</label>
-      <select [(ngModel)]="user.preferredContactMethod" class="form-control" id="contactSelect" name="contact">
-        <option value="email">Email</option>
-        <option value="sms">SMS</option>
-      </select>
-    </div>
-    <div class="form-group form-check">
-      <input [(ngModel)]="user.administrator" type="checkbox" class="form-check-input" id="adminInput" name="admin" [attr.disabled]="!auth.isAdministrator() ? '' : null">
-      <label class="form-check-label" for="adminInput">Administrator</label>
-    </div>
-    <div class="form-group">
-      <button *ngIf="user?.id === auth.getCurrentUser()?.id; else resetPasswordButton" (click)="promptChangePassword()" class="btn btn-outline-primary">
-        Change Password
-      </button>
-      <ng-template #resetPasswordButton>
-        <button (click)="resetPassword()" class="btn btn-outline-primary">
-          Reset Password
-        </button>
+<h2 class="mb-3">Modify User</h2>
+<div class = "mx-3">
+    <form *ngIf="user; else loadingSpinner">
+        <div class="form-group">
+          <label for="nameInput">Name</label>
+          <input [(ngModel)]="user.name" type="text" class="form-control" id="nameInput" placeholder="Name" name="name">
+        </div>
+        <div class="form-group">
+          <label for="emailInput">Email</label>
+          <input [ngModel]="user.email" type="email" class="form-control" id="emailInput" placeholder="Email" name="email" readonly>
+        </div>
+        <div class="form-group">
+          <label for="phoneInput">Phone</label>
+          <input [(ngModel)]="user.phone" type="text" class="form-control" id="phoneInput" placeholder="Phone" name="phone">
+        </div>
+        <div class="form-group">
+          <label for="contactSelect">Preferred Contact Method</label>
+          <select [(ngModel)]="user.preferredContactMethod" class="form-control" id="contactSelect" name="contact">
+            <option value="email">Email</option>
+            <option value="sms">SMS</option>
+          </select>
+        </div>
+        <div class="form-group form-check">
+          <input [(ngModel)]="user.administrator" type="checkbox" class="form-check-input" id="adminInput" name="admin" [attr.disabled]="!auth.isAdministrator() ? '' : null">
+          <label class="form-check-label" for="adminInput">Administrator</label>
+        </div>
+        <div class="form-group">
+          <button *ngIf="user?.id === auth.getCurrentUser()?.id; else resetPasswordButton" (click)="promptChangePassword()" class="btn btn-outline-primary">
+            Change Password
+          </button>
+          <ng-template #resetPasswordButton>
+            <button (click)="resetPassword()" class="btn btn-outline-warning">
+              Reset Password
+            </button>
+          </ng-template>
+        </div>
+        <app-alert [alertStyle]="'danger'" #generalAlert></app-alert>
+        <div class = "btn-group">
+          <button (click)="saveChanges()" class="btn btn-outline-primary">
+              Save Changes
+              <span *ngIf="processing" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+            </button>
+            <button class="btn btn-outline-danger" (click)="goBack()">
+              Return Without Saving
+            </button>
+        </div>
+      </form>
+      <ng-template #loadingSpinner>
+        <div class="text-center">
+          <div class="spinner-border" role="status">
+            <span class="sr-only">Loading...</span>
+          </div>
+        </div>
       </ng-template>
-    </div>
-    <app-alert [alertStyle]="'danger'" #generalAlert></app-alert>
-    <button (click)="saveChanges()" class="btn btn-outline-primary">
-      Save Changes
-      <span *ngIf="processing" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-    </button>
-    &nbsp;
-    <button class="btn btn-outline-secondary" (click)="goBack()">
-      Back
-    </button>
-  </form>
-  <ng-template #loadingSpinner>
-    <div class="text-center">
-      <div class="spinner-border" role="status">
-        <span class="sr-only">Loading...</span>
-      </div>
-    </div>
-  </ng-template>
 </div>
+  
 <app-modal>
   <ng-container modal-title>
     Change Password
