Minor ui tweaks to anomaly table and modify user for consistency

--- a/frontend/mission-ops/src/app/anomaly-subscription/anomaly-subscription.component.html
+++ b/frontend/mission-ops/src/app/anomaly-subscription/anomaly-subscription.component.html
@@ -1,15 +1,12 @@
-<h3>Manage Anomaly Subscriptions</h3>
-
-<br>
-
-<div *ngIf="systems && systems.length > 0; else noSystems" style="width: 700px">
+<h2 class="mb-3">Manage Anomaly Subscriptions</h2>
+<div *ngIf="systems && systems.length > 0; else noSystems" class="col-md-8">
   <ul class="list-group">
     <li *ngFor="let sys of systems"
      [class.active]="sys === selectedSys"
       class="list-group-item">
       {{sys.systemName}}
-      <button *ngIf="isSubscribed(sys.systemID)" class="btn btn-dark" (click)="removeSub(sys.systemID, sys.systemName)" style="width: 130px; float: right">Unsubscribe</button>
-      <button *ngIf="!isSubscribed(sys.systemID)" class="btn btn-info" (click)="addSubscription(sys.systemID, sys.systemName)" style="width: 130px; float: right">Subscribe</button>
+      <button *ngIf="isSubscribed(sys.systemID)" class="btn btn-outline-danger" (click)="removeSub(sys.systemID, sys.systemName)" style="width: 130px; float: right">Unsubscribe</button>
+      <button *ngIf="!isSubscribed(sys.systemID)" class="btn btn-outline-success" (click)="addSubscription(sys.systemID, sys.systemName)" style="width: 130px; float: right">Subscribe</button>
     </li>
    </ul>
 </div>
