--- a/frontend/mission-ops/src/app/modify-user/modify-user.component.html
+++ b/frontend/mission-ops/src/app/modify-user/modify-user.component.html
@@ -25,7 +25,7 @@
           <label class="form-check-label" for="adminInput">Administrator</label>
         </div>
         <div class="form-group">
-          <button *ngIf="user?.id === auth.getCurrentUser()?.id; else resetPasswordButton" (click)="promptChangePassword()" class="btn btn-outline-primary">
+          <button *ngIf="user?.id === auth.getCurrentUser()?.id; else resetPasswordButton" (click)="promptChangePassword()" class="btn btn-outline-warning">
             Change Password
           </button>
           <ng-template #resetPasswordButton>
